# Neuronal-Network

./: .rustfmt.toml  Cargo.toml  README.md
src/: main.rs  matrix.rs  matrix_tests.rs  network.rs  nn.rs
src/matrix/: matrix.rs
src/network/: network.rs
src/tests/: matrix_tests.rs  network_tests.rs
src/util/: functions.rs
src/utils/: macros.rs
