[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
libc = "0.2"
rand = "0.8"
num = "0.4"

[lib]
namer = "matrix"
path = "src/matrix.rs" # Path to the main library module

[[test]]
name = "matrix_tests"
path = "src/tests/matrix_tests.rs"

[[test]]
name = "network_tests"
path = "src/tests/network_tests.rs"